# ros2_ws_cyskin_project

./: skin_data.txt
src/cyskin_acquisition/: .gitignore  CMakeLists.txt  CySkin_ML_Analysis.ipynb  Data_Exploration.ipynb  README.md
src/cyskin_acquisition/data/0_finger/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt  sample_26.txt  sample_27.txt  sample_28.txt  sample_29.txt  sample_30.txt  sample_31.txt  sample_32.txt  sample_33.txt  sample_34.txt  sample_35.txt  sample_36.txt  sample_37.txt  sample_38.txt  sample_39.txt  sample_40.txt  (+1 more)
src/cyskin_acquisition/data/1_finger/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt  sample_26.txt  sample_27.txt  sample_28.txt  sample_29.txt  sample_30.txt  sample_31.txt  sample_32.txt  sample_33.txt  sample_34.txt  sample_35.txt  sample_36.txt  sample_37.txt  sample_38.txt  sample_39.txt  sample_40.txt  (+11 more)
src/cyskin_acquisition/data/2_finger/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt  sample_26.txt  sample_27.txt  sample_28.txt  sample_29.txt  sample_30.txt  sample_31.txt  sample_32.txt  sample_33.txt  sample_34.txt  sample_35.txt  sample_36.txt  sample_37.txt  sample_38.txt  sample_39.txt  sample_40.txt  (+30 more)
src/cyskin_acquisition/data/3_finger/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt  sample_26.txt  sample_27.txt  sample_28.txt  sample_29.txt  sample_30.txt  sample_31.txt  sample_32.txt  sample_33.txt  sample_34.txt  sample_35.txt  sample_36.txt  sample_37.txt  sample_38.txt  sample_39.txt  sample_40.txt  (+30 more)
src/cyskin_acquisition/data/4_finger/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt  sample_26.txt  sample_27.txt  sample_28.txt  sample_29.txt  sample_30.txt  sample_31.txt  sample_32.txt  sample_33.txt  sample_34.txt  sample_35.txt  sample_36.txt  sample_37.txt  sample_38.txt  sample_39.txt  sample_40.txt  (+30 more)
src/cyskin_acquisition/data/5_finger/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_21.txt  sample_22.txt  sample_23.txt  sample_24.txt  sample_25.txt  sample_26.txt  sample_27.txt  sample_28.txt  sample_29.txt  sample_30.txt  sample_31.txt  sample_32.txt  sample_33.txt  sample_34.txt  sample_35.txt  sample_36.txt  sample_37.txt  sample_38.txt  sample_39.txt  sample_40.txt  (+31 more)
src/cyskin_acquisition/ihb-pc-shared/: extihbcmd.h  ihbcmd.h
src/cyskin_acquisition/include/: bash_publisher.hpp  calibrator.hpp  cyskin_subscriber.hpp  file_publisher.hpp  ros_publisher.hpp  shared_memory_publisher.hpp  skin_publisher.hpp  updater.h  updater_fake.h  updater_interface.h
src/cyskin_acquisition/libs/can_helper/: can_helper.h
src/cyskin_acquisition/libs/cybootloaderutils/include/: cybtldr_api.h  cybtldr_api2.h  cybtldr_parse.h
src/cyskin_acquisition/libs/cynetworklib/include/: cynet_buffer.h  cynet_comm.h  cynet_comm_can.h  cynet_comm_data.h  cynet_config.h  (+19 more)
src/cyskin_acquisition/skin-ihb-pc-shared/: skin_cmd_pc.h  skin_const_pc.h
src/cyskin_acquisition/src/: bash_publisher.cpp  calibrator.cpp  cyskin_subscriber.cpp  file_publisher.cpp  main.cpp  ros_publisher.cpp  shared_memory_publisher.cpp  subscriber_main.cpp  updater.cpp  updater_fake.cpp  updater_interface.cpp
src/cyskin_acquisition/st-ihb-shared/: skin_cmd.h  skin_const.h
uc1_tactile_images/: CMakeLists.txt  LICENSE
uc1_tactile_images/calibration_files/: hexagon_cyskin_full_isomap.json
uc1_tactile_images/calibration_files/UR10e_SKIN_CALIBRATION_FILES/: ur10e_link1_patch1_full_flatmap.json  ur10e_link1_patch1_full_isomap.json  ur10e_link2_patch1.json  ur10e_link2_patch1_flatmap.json  ur10e_link2_patch2_isomap.json  ur10e_link2_patch4_flatmap.json  ur10e_link2_patch4_full_isomap.json
uc1_tactile_images/calibration_files/old/: CASE_patch4.json  DEMO_patch_1.json
uc1_tactile_images/include/: ProximityTaskGenerator.hpp  TactileTaskHelpers.hpp
uc1_tactile_images/models_onnx/: HandsNet_handles_finetuned.onnx  handsnet_finetuned.onnx  onnx_checker.m
uc1_tactile_images/msg/: Contact.msg  ContactArray.msg
uc1_tactile_images/resources/ply/: wrist2.ply
uc1_tactile_images/resources/stl/: upperarm.stl
uc1_tactile_images/scripts/: TactileInferenceNode.py
uc1_tactile_images/skin_ids/: IDs_UR10_link2_patch3.txt  IDs_UR10_link2_patch4.txt
uc1_tactile_images/skin_ids/old/: IDs_UR10_link1_patch1.txt
(+243 files in other folders)
